--- a/WebServiceUniversus/packages.config
+++ b/WebServiceUniversus/packages.config
@@ -10,4 +10,7 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
+  <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net461" />
 </packages>
