--- a/WebServiceUniversus/Web.config
+++ b/WebServiceUniversus/Web.config
@@ -7,7 +7,13 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
-  
+  <!--Строка подключения до /connectionStrings-->
+
+  <connectionStrings>
+  <add name="universusConnectionString" 
+   connectionString=" Server=127.0.0.1;uid=root;pwd=3616;Database=universus;"
+   providerName="System.Data.SqlClient" />
+</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
