--- a/WebServiceUniversus/Web.config
+++ b/WebServiceUniversus/Web.config
@@ -32,12 +32,13 @@
     </compilers>
   </system.codedom>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules>
-      <remove name="ApplicationInsightsWebTracking"/>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
-        preCondition="managedHandler"/>
-    </modules>
+    <validation validateIntegratedModeConfiguration="false" />
+    <defaultDocument>
+      <files>
+        <add value="WebService1.asmx"/>
+      </files>
+    </defaultDocument>
+    <directoryBrowse enabled="false"/>
   </system.webServer>
 
   <log4net>
